# iclassdl

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: cpp.yml
cmake/: iclassdl-config.cmake.in
iclassdl/: Cargo.toml
iclassdl/src/: video.rs
include/iclassdl/: media.h  media_impl.h  session.h  video.h
src/: CMakeLists.txt  main.cpp  media.c  media.cpp  media_impl.c  session.cpp  video.c
